<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#B6DCFE">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#F0F8FF"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="#012746"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="25sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="25sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="25sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Multiply"
            android:onClick="onOperator"
            android:textSize="25sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="25sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Minus"
            android:textSize="25sp"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="25sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ac"
            android:onClick="onClear"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#32FAF0">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Equal"
            android:textSize="35sp"
            android:onClick="onEqual"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>